Changelog for pdoTools.

2.10.1 pl
==============
- [#256] [Fenom] Fixed bug with caching of scripts and styles.

2.10.0 pl
==============
- [#259] [pdoFetch] Fixed error when passed pure SQL into "having" parameter.
- [#258] [pdoPage] Canonical urls always must be "full".
- [#245] [pdoMenu] Ability to use conditional tpls instead of regular "tpl".
- [#121] [pdoMenu] Improved work of specified chunks with weblinks.

2.9.3 pl
==============
- [#255] [Fenom] New system setting "pdotools_fenom_save_on_errors" to save code on compilation errors in the cache directory for later debugging.

2.9.2 pl
==============
- [pdoParser] Proper traversal trough arrays fields of resources in fast tags.

2.9.1 pl
==============
- [Fenom] Updated to version 2.11.8.

2.9.0 pl
==============
- [pdoPage] Improved "&pageLinkScheme" logic.
- [#249] A little improvement for resource modifier.
- [#251] [pdoFetch] More compatibility with PHP 7.1.
- [#253] [pdoPage] Fixing a missing pagination in Ajax mode.
- [#254] [Fenom] Options of json modifiers must check version of PHP to proper work.

2.8.6 pl
==============
- [pdoArchive] Ability to specify fields with regular dates in the "&dateField" parameter.
- [Fenom] Added all options to json modifiers.

2.8.5 pl
==============
- [#248] [pdoPage] Fixed E_WARNING with array values in GET parameters.

2.8.4 pl
==============
- Ability to use file elements in core path outside base path.
- Fixed bug with the caching of elements.

2.8.3 pl
==============
- [Fenom] Fixed rare bug with the caching of scripts and styles that was registered via Fenom.
- [pdoPage] Fixed the "?page=1" in the url when ajaxMode is enabled.
- [pdoPage] Snippet will register "canonical" link if "&setMeta" is enabled.
- [pdoPage] Fix processing of request with rawurldecode on some servers.
- [pdoTools] Added passing of "scriptProperties" values into a "&prepareSnippet".

2.8.2 pl
==============
- [pdoMenu] Fixed the checking of permissions for containers.